# embedded-conformity

./: Cargo.toml  README.md  flake.nix  roadmap.md  run-in-all.sh  spec.md
.github/: zizmor.yml
.github/ISSUE_TEMPLATE/: new-chip.md  new-interface.md  new-test.md
.github/workflows/: audit.yml  ci.yml  spelling.yml
client/: Cargo.toml  README.md
client/.cargo/: config.toml
esp32c6/: Cargo.toml
esp32c6/.cargo/: config.toml
esp32c6/src/: main.rs
fake-peripheral/: Cargo.toml
fake-peripheral/.cargo/: config.toml
fake-peripheral/src/: main.rs  pio.rs
nRF52/: Cargo.toml
nRF52/.cargo/: config.toml
nRF52/src/: main.rs
rp2040/: Cargo.toml
rp2040/.cargo/: config.toml
rp2040/src/: main.rs
runner/: Cargo.toml  README.md  config.toml  esp.toml  stm32.toml
runner/src/: coordinator.rs  defmt_logger.rs  main.rs
shield/: Cargo.toml  README.md  memory.x
shield/.cargo/: config.toml
shield/src/: main.rs
stm32/: Cargo.toml
stm32/.cargo/: config.toml
stm32/src/: main.rs
test-suite/: Cargo.toml  README.md
test-suite/src/: dut.rs  fp.rs  i2c_tests.rs  lib.rs  list_of_tests.rs  protocol.rs  sanity_tests.rs
test-suite/src/i2c_tests/: address_nak.rs  data_nak.rs  i2c_pio.rs  i2c_simple.pio  i2c_slave.pio  i2c_slave.rs  mod.rs  multi_read.rs  multi_write.rs  simple_read.rs  simple_write.rs  tester.rs
test-suite/src/i2c_tests/pio_tests/: i2c_data_nak.pio  i2c_simple.pio  mod.rs
