[package]
name = "rp2040"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

# defmt = "1.0.1"
# defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0" }

embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.4.0", features = [ ] }
embassy-rp = { version = "0.4.0", features = [ "time-driver" , "rp2040"] }
defmt-rtt = "1.0.0"
