[package]
edition = "2021"
name    = "esp32c6"
version = "0.1.0"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32c6"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }

test-suite = { path = "../test-suite" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
