[package]
name = "nrf52"
version = "0.1.0"
edition = "2024"

[dependencies]
test-suite = { path = "../test-suite" }

defmt = "1.0.1"
rtt-target = { version = "0.6.1", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-executor = { version = "0.7.0",features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-nrf = { version = "0.3.1", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
