[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
probe-rs = "0.25"
clap = { version = "4.5", features = ["derive"] }
cargo = { version = "0.87", features = [ "all-static" ] }
test-suite = { path = "../test-suite", features = ["std"] }
defmt-decoder = "1"
defmt-parser = "1"
serde = { version = "1", features = [ "derive" ] }
toml = "0.8"
parking_lot = "0.12"

tracing = "0.1"
tracing-subscriber = "0.3"

