[package]
name = "runner"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
probe-rs = "0.31"
clap = { version = "4.5", features = ["derive"] }
escargot = "0.5.15"
test-suite = { path = "../test-suite", features = ["std"] }
defmt-decoder = "1"
defmt-parser = "1"
serde = { version = "1", features = [ "derive" ] }
toml = "0.8"
parking_lot = "0.12"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
object = "0.39.0"
