[package]
name = "test-shield"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
defmt = "1.0.1"
rtt-target = { version = "0.6.1", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-executor = { version = "0.7.0",features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
# embassy-rp = { version = "0.4.0", features = [ "defmt", "time-driver", "rp2040"] }

test-suite = { path = "../test-suite", features = ["fp"] }
