[package]
edition = "2021"
name = "embassy-stm32"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
test-suite = { path = "../test-suite" }

defmt = "1.0.1"
rtt-target = { version = "0.6.1", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-executor = { version = "0.7.0",features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }

# Change stm32f103rb to your chip name, if necessary.
embassy-stm32 = { version = "0.4.0", features = [ "defmt", "stm32l476rg", "unstable-pac", "memory-x"]  }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

