[package]
name = "test-suite"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = { version = "1", features = ["defmt-03"] }
defmt = { version = "0.3" }
rtt-target = { version = "0.6", features = [ "defmt" ] }
embassy-rp = { version = "0.4.0", features = [ "defmt", "time-driver", "rp2040"], optional = true }

serde = { version = "1", features = ["derive"], default-features = false }
postcard = { version = "1", features = ["use-crc"] }
heapless = "0.7.17" # pinned by postcard
strum = { version = "0.26", features = ["derive"], default-features = false }

rand = { optional = true, version = "0.9.1" }


[features]
std = [ "serde/std", "postcard/alloc", "rand" ]
fp = ["embassy-rp"]
