[package]
name = "test-suite"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
defmt = { version = "0.3" }
embedded-hal = { version = "1", features = ["defmt-03"] }
rtt-target = { version = "0.6", features = [ "defmt" ] }

embassy-rp = { version = "0.4.0", features = [ "defmt", "time-driver" ], optional = true }
embassy-futures = "0.1.1"

serde = { version = "1", features = ["derive"], default-features = false }
postcard = { version = "1", features = ["use-crc"] }
heapless = "0.7.17" # pinned by postcard

strum = { version = "0.26", features = ["derive"], default-features = false }
rand = { optional = true, version = "0.9.1" }
clap = { version = "4.6.1", optional = true, default-features = false, features = ["std", "derive"] }

[features]
std = [ "serde/std", "postcard/alloc", "rand" ]
fp = [ "embassy-rp", "embassy-rp/rp2040"]
clap = [ "dep:clap", "std" ]
